                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 01-06-2005 added: Milkdrop Preset changing thanks to Bizzeh.  Requires new keymap, skin + Milkdrop.vis.
 - 01-06-2005 added: SMB Share Controll: Share group definitions are now complete [GeminiServer]
 - 31-05-2005 updated: Chinese (Simple) language file (Thnx to gaocuo)
 - 31-05-2005 fixed: ogg streams got deleted from music database when reorg'ing even if the ogg file exists
 - 31-05-2005 fixed: music scanning, vorbisfile.dll was not loaded
 - 31-05-2005 changed: section loader for dll's is now thread save
 - 31-05-2005 fixed: my music, sections and dll's got unloaded even if they are not loaded
 - 31-05-2005 fixed: ogg files without vorbis comments could not be played
 - 31-05-2005 fixed: paplayer could crash when next song is played
 - 30-05-2005 updated: mplayer.dll
 - 30-05-2005 updated: Swedish strings.xml Again: Please submit better translations if possible for this as i know some translations just suck!
 - 30-05-2005 reverted: aspectratio change in dvdplayer (original solution was much better) + added aspectratio override from dvd ifo files.
 - 30-05-2005 fixed: some frames where missed when navigating in dvd menus. (only partial fix, still problems)
 - 29-05-2005 changed: simplified vorbisfile.dll handling
 - 29-05-2005 fixed: ogg and flac files could not be started from the database view after rescan
 - 29-05-2005 fixed: audioscrobbler submits only the first song when using PAPlayer v2
 - 29-05-2005 added: support for ogg bitstreams aka chapters (vorbisfile.dll got updated)
 - 28-05-2005 added: SF patch [ 1203847 ] New info tags for musicplayer, thanks to desertbear